force-app/main/default/objects/TriggerMetric__c/TriggerMetric__c.object-meta.xml
<CustomObject>
    <label>Trigger Metric</label>
    <nameField>
        <displayFormat>TM-{00000000}</displayFormat>
        <label>Trigger Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>