force-app/main/default/objects/TriggerMetric__c/fields/CPUTime__c.field-meta.xml
<CustomField>
    <fullName>CPUTime__c</fullName>
    <label>CPU Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>