force-app/main/default/objects/TriggerMetric__c/fields/ExecutionId__c.field-meta.xml
<CustomField>
    <fullName>ExecutionId__c</fullName>
    <label>Execution Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>