force-app/main/default/objects/TriggerMetric__c/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <label>Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>