force-app/main/default/objects/TriggerMetric__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_INSERT</fullName>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>