force-app/main/default/objects/TriggerMetric__c/fields/ParentExecutionId__c.field-meta.xml
<CustomField>
    <fullName>ParentExecutionId__c</fullName>
    <label>Parent Execution Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>