force-app/main/default/objects/TriggerMetric__c/fields/RecordCount__c.field-meta.xml
<CustomField>
    <fullName>RecordCount__c</fullName>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>