force-app/main/default/objects/TriggerMetric__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <label>SObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>