force-app/main/default/objects/TriggerMetric__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Handler__c</columns>
    <columns>Operation__c</columns>
    <columns>SObjectType__c</columns>
    <columns>RecordCount__c</columns>
    <columns>ExecutionTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>